# calcpp

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  README_de  configure.ac  meson.build
nbproject/: launcher.properties
po/: ChangeLog  Makevars  POTFILES  POTFILES.in  de.po  meson.build
res/: Makefile.am  abt-dlg.ui  app-menu.ui  calc-win.ui  calcpp.desktop  calcpp.desktop.in  calcpp.gresources.xml  char-dlg.ui  color-dlg.ui  date-dlg.ui  de.pfeifer_syscon.calcpp.gschema.xml  fract-dlg.css  fract-dlg.ui  gauss-dlg.ui  meson.build  num-dlg.ui  plot-dlg.ui  pref-dlg.ui  prime-dlg.ui  quad-dlg.ui  unit-dlg.ui  unit.js  win.rc
src/: AngleUnit.cpp  AngleUnit.hpp  CalcTextView.cpp  CalcTextView.hpp  CalcTreeView.cpp  CalcTreeView.hpp  CalcppApp.cpp  CalcppApp.hpp  CalcppWin.cpp  CalcppWin.hpp  CharDialog.cpp  CharDialog.hpp  ColorDialog.cpp  ColorDialog.hpp  DateDialog.cpp  DateDialog.hpp  EvalContext.cpp  EvalContext.hpp  FractDialog.cpp  FractDialog.hpp  Fraction.cpp  Fraction.hpp  Function.cpp  Function.hpp  GaussDialog.cpp  GaussDialog.hpp  Makefile.am  Matrix.cpp  Matrix.hpp  NumBaseDialog.cpp  NumBaseDialog.hpp  NumDialog.cpp  NumDialog.hpp  OutputForm.cpp  OutputForm.hpp  PlotDialog.cpp  PlotDialog.hpp  PrefDialog.cpp  PrefDialog.hpp  PrimeDialog.cpp  (+15 more)
srcLib/: BaseEval.cpp  BaseEval.hpp  ConversionContext.cpp  ConversionContext.hpp  Function.cpp  Function.hpp  Makefile.am  NumberFormat.cpp  NumberFormat.hpp  Syntax.cpp  Syntax.hpp  Token.cpp  Token.hpp  meson.build
test/: Makefile.am  PrimeTest.cpp  PrimeTest.hpp  calc_test.cpp  calc_test.hpp  lin_test.cpp  meson.build
