
configure_file(output : meson.project_name() + '_config.h'
               , configuration : conf)

sources = files(
     'CalcppApp.cpp' 
    , 'CalcppWin.cpp'
    , 'EvalContext.cpp'
    , 'OutputForm.cpp'
    , 'AngleUnit.cpp'
    , 'CalcTextView.cpp'
    , 'CalcTreeView.cpp'
    , 'CharDialog.cpp'
    , 'NumDialog.cpp'
    , 'NumBaseDialog.cpp'
    , 'QuadDialog.cpp'
    , 'GaussDialog.cpp'
    , 'DateDialog.cpp'
    , 'Matrix.cpp'
    , 'Unit.cpp'
    , 'UnitDialog.cpp'
    , 'PlotDialog.cpp'
    , 'QuadraticEquation.cpp'
    , 'PrefDialog.cpp'
    , 'ColorDialog.cpp'
    )

